--- a/index.html
+++ b/index.html
@@ -435,5 +435,6 @@
     <div class="rights">Все права защищены</div>
   </div>
 </footer>
+<script src="scripts/script.js"></script>
 </body>
 </html>
