--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
       <nav class="menu">
         <ul class="menu-list">
-          <li class="menu-item"><a href="#">Почему у нас</a></li>
-          <li class="menu-item"><a href="#">Меню бургеров</a></li>
-          <li class="menu-item"><a href="#">Оформление заказа</a></li>
+          <li class="menu-item"><a data-link="why">Почему у нас</a></li>
+          <li class="menu-item"><a data-link="products">Меню бургеров</a></li>
+          <li class="menu-item"><a data-link="order">Оформление заказа</a></li>
         </ul>
       </nav>
       <div class="currency" title="change currency">$</div>
@@ -38,7 +38,7 @@
           вкусом
           наших бургеров. Готовим для вас лучшие бургеры в городе из отборной мраморной говядины.</p>
         <div class="main-action">
-          <button class="button">Смотреть меню</button>
+          <button class="button" id="main-action-btn">Смотреть меню</button>
         </div>
       </div>
       <img class="main-image" src="images/main_burger.png" alt="main-burger">
@@ -46,7 +46,7 @@
   </section>
 
 </section>
-<section class="why">
+<section class="why" id="why">
   <div class="container">
     <div class="common-title">почему нас выбирают?</div>
     <div class="why-items">
@@ -81,7 +81,7 @@
     </div>
   </div>
 </section>
-<section class="product">
+<section class="product" id="products">
   <div class="container">
 
     <div class="common-title">
@@ -400,7 +400,7 @@
     </div>
   </div>
 </section>
-<section class="order">
+<section class="order" id="order">
   <div class="container">
     <div class="order-title common-title">оформление заказа</div>
     <img src="images/order_image.png" alt="burger-in-the-box" class="order-image">
@@ -410,15 +410,15 @@
       </div>
       <div class="order-form-inputs">
         <div class="order-form-input">
-          <input type="text" placeholder="Ваш Заказ">
+          <input type="text" placeholder="Ваш Заказ" id="burger">
         </div>
         <div class="order-form-input">
-          <input type="text" placeholder="Вашу Имя">
+          <input type="text" placeholder="Вашу Имя" id="name">
         </div>
         <div class="order-form-input">
-          <input type="text" placeholder="Ваш Телефон">
+          <input type="text" placeholder="Ваш Телефон" id="phone">
         </div>
-        <button class="button">
+        <button class="button" id="order-action">
           Оформить заказ
         </button>
       </div>
