feat: add currency to the script.js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li class="menu-item"><a data-link="order">Оформление заказа</a></li>
         </ul>
       </nav>
-      <div class="currency" title="change currency">$</div>
+      <div class="currency" title="change currency" id="change-currency">$</div>
     </div>
   </header>
 
@@ -98,7 +98,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">8 $</div>
+            <div class="products-item-price" data-base-price="8">8 $</div>
             <div class="products-item-weight">360gr</div>
           </div>
           <div class="products-item-action">
@@ -124,7 +124,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">7 $</div>
+            <div class="products-item-price" data-base-price="7">7 $</div>
             <div class="products-item-weight">390gr</div>
           </div>
           <div class="products-item-action">
@@ -150,7 +150,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">10 $</div>
+            <div class="products-item-price" data-base-price="10">10 $</div>
             <div class="products-item-weight">420gr</div>
           </div>
           <div class="products-item-action">
@@ -176,7 +176,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">7 $</div>
+            <div class="products-item-price" data-base-price="7">7 $</div>
             <div class="products-item-weight">220gr</div>
           </div>
           <div class="products-item-action">
@@ -202,7 +202,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">8 $</div>
+            <div class="products-item-price" data-base-price="8">8 $</div>
             <div class="products-item-weight">220gr</div>
           </div>
           <div class="products-item-action">
@@ -228,7 +228,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">9 $</div>
+            <div class="products-item-price" data-base-price="9">9 $</div>
             <div class="products-item-weight">320gr</div>
           </div>
           <div class="products-item-action">
@@ -254,7 +254,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">8 $</div>
+            <div class="products-item-price" data-base-price="8">8 $</div>
             <div class="products-item-weight">280gr</div>
           </div>
           <div class="products-item-action">
@@ -279,7 +279,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">7 $</div>
+            <div class="products-item-price" data-base-price="7">7 $</div>
             <div class="products-item-weight">380gr</div>
           </div>
           <div class="products-item-action">
@@ -304,7 +304,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">11 $</div>
+            <div class="products-item-price" data-base-price="11">11 $</div>
             <div class="products-item-weight">400gr</div>
           </div>
           <div class="products-item-action">
@@ -329,7 +329,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">9 $</div>
+            <div class="products-item-price" data-base-price="9">9 $</div>
             <div class="products-item-weight">300gr</div>
           </div>
           <div class="products-item-action">
@@ -354,7 +354,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">8 $</div>
+            <div class="products-item-price" data-base-price="8">8 $</div>
             <div class="products-item-weight">320gr</div>
           </div>
           <div class="products-item-action">
@@ -379,7 +379,7 @@
         </div>
         <div class="products-item-extra">
           <div class="products-item-info">
-            <div class="products-item-price">9 $</div>
+            <div class="products-item-price" data-base-price="9">9 $</div>
             <div class="products-item-weight">360gr</div>
           </div>
           <div class="products-item-action">
